# thorlabs_web_control

./: .gitignore  README.md  main.py  pyproject.toml
docs/plans/: 2026-03-02-pm100d-backend-design.md  2026-03-02-pm100d-implementation.md  2026-03-03-coordinated-scan-design.md  2026-03-03-coordinated-scan-implementation.md
kdc101/: api.py  config.py  driver.py  main.py  schemas.py  service.py
kdc101/static/: index.html  webserial.html
pm100d/: __init__.py  api.py  config.py  driver.py  main.py  schemas.py  service.py
pm100d/static/: index.html
scan/: api.py  config.py  main.py  schemas.py  service.py
scan/static/: index.html
