[project]
name = "thorlabs-instruments"
version = "0.1.0"
description = "Thorlabs instrument drivers (PM100D, KDC101) with REST API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "ftd2xx>=1.3.8",
    "pydantic>=2.12.5",
    "pyserial>=3.5",
    "pyvisa>=1.16.2",
    "pyvisa-py>=0.8.1",
    "sse-starlette>=3.3.2",
    "uvicorn>=0.41.0",
]
